bug(general-issue): fix general design issue  - fix navbar submenu on mobile  - fix cause transfer progress bar on mobile [fixes]

--- a/components/LayoutWrapper/index.module.scss
+++ b/components/LayoutWrapper/index.module.scss
@@ -242,6 +242,10 @@
             font-size: 0.8em;
           }
         }
+
+        @media screen and (max-width: #{$mobile-size}) {
+          flex-flow: column;
+        }
       }
       &__category {
         width: 100%;
